2005/10/9 -- released version 20051009_trunk

2005/10/8 -- released version 20051008_trunk

* only warn if RRA parameters other than CF are different
  config file and an RRD -- niko, for Javier Oviedo <joviedo *plcendesa.com>

2005/10/7 -- released version 20051007_trunk

2005/10/6 -- released version 20051006_trunk

2005/10/5 -- released version 20051005_trunk

2005/10/4 -- released version 20051004_trunk

* make it work (hopefully) with even older versions of CGI::Carp if
  'changecgiprogramname' is set to 'no' in the General section
  -- niko

2005/10/3 -- released version 20051003_trunk

2005/10/2 -- released version 20051002_trunk

2005/10/1 -- released version 20051001_trunk

2005/9/30 -- released version 20050930_trunk

2005/9/29 -- released version 20050929_trunk

* make having an older version of CGI::Carp a non-fatal error and
  recommend a newer one in the docs
  -- niko, reported by Ron Bisset <Ron.Bisset *cnrinternational.com>

2005/9/28 -- released version 20050928_trunk

2005/9/27 -- released version 20050927_trunk

2005/9/26 -- released version 20050926_trunk

* fixed FPing probe so it doesn't report 100% loss when the first ping is lost
  -- niko, reported by Matthew Swainston <njunk *exemail.com.au>
* don't need to have all the external modules installed to build the
  documentation -- niko

2005/9/25 -- released version 20050925_trunk

2005/9/24 -- released version 20050924_trunk

2005/9/23 -- released version 20050923_trunk

2005/9/22 -- released version 20050922_trunk

2005/9/21 -- released version 20050921_trunk

2005/9/20 -- released version 20050920_trunk

2005/9/19 -- released version 20050919_trunk

2005/9/18 -- released version 20050918_trunk

2005/9/17 -- released version 20050917_trunk

2005/9/16 -- released version 20050916_trunk

2005/9/15 -- released version 20050915_trunk

* reload the config file on HUP signal and switch to the new one if it 
  isn't broken. After reloading, restart gracefully so that no measurement is