@@ -1,3 +1,5 @@
+2005/10/10 -- released version 20051010_trunk
+
 2005/10/9 -- released version 20051009_trunk
 
 2005/10/8 -- released version 20051008_trunk
